# mLRS

./: .gitmodules  CMakeLists.txt  platformio.ini  sdkconfig.tx-betafpv-micro-1w-2400-espidf
.github/workflows/: build-targets.yml
lua/: mLRS.lua
mLRS/: CMakeLists.txt
mLRS/Common/: common_conf.h  setup.h  setup_list.h  setup_types.h
mLRS/Common/esp-lib/: HardwareSerialCRSF.h  esp-eeprom.h  esp-spi.h  esp-uart-forjrpin5.h  esp-uart.h
mLRS/Common/hal/: device_conf.h  esp-glue.h  esp-rxclock.h  hal.h
mLRS/Common/hal/esp/: esp-device_conf.h  esp-hal.h  rx-hal-dev-sx1278-esp8266.h  rx-hal-devboard-2400-esp32.h  rx-hal-diy-dev-900-esp32.h  rx-hal-generic-2400-esp8285.h  rx-hal-generic-2400-pa-d-esp8285.h  rx-hal-generic-2400-pa-esp8285.h  rx-hal-generic-2400-pa-td-esp32.h  rx-hal-generic-900-esp8285.h  tx-hal-betafpv-micro-1w-2400-esp32.h  tx-hal-diy-dev-900-esp32.h  tx-hal-radiomaster-int-ax12-esp32.h  tx-hal-radiomaster-int-ax15-esp32.h
mLRS/Common/protocols/: crsf_protocol.h
mLRS/Common/sx-drivers/: lr20xx_driver.h  sx12xx.h
mLRS/CommonRx/: mlrs-rx.cpp
mLRS/CommonTx/: crsf_interface_tx.h  esp.h  in_interface.h  jr_pin5_interface.h  mlrs-tx.cpp
tools/: crsf_parse.py
